@@ -11,13 +11,12 @@ LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
         --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) \
        $(LDFLAGS) -o $@
 
-LDADD = ../../../server/libserver.a \
-                ../../../common/libcross.a \
-                ../../../random_maps/librandom_map.a \
-                ../../../socket/libsocket.a \
-		../../../types/libtypes.a \
-		../../../types/libtypes.a \
-                $(LIBDL) @CHECK_LIBS@
+LDADD = $(top_builddir)/server/libserver.a \
+        $(top_builddir)/common/libcross.a \
+        $(top_builddir)/random_maps/librandom_map.a \
+        $(top_builddir)/socket/libsocket.a \
+        $(top_builddir)/types/libtypes.a \
+        $(LIBDL) @CHECK_LIBS@
 
 ../../../types/libtypes.a:
 	( cd ../../../types ; make libtypes.a )
@@ -40,8 +39,8 @@ LDADD = ../../../server/libserver.a \
 	( cd ../../../types ; make libtypes.a )
 
 # tests not implemented for now
-#TESTS=check_alchemy check_apply check_ban check_build_map check_c_chat check_c_misc check_c_move check_c_new check_c_object check_commands check_c_party check_c_range check_c_wiz check_daemon check_disease check_egoitem check_gods check_hiscore check_init check_login check_main check_monster check_move check_pets check_player check_plugins check_resurrection check_rune check_shop check_skills check_skill_util check_spell_attack check_spell_effect check_spell_util check_swamp check_swap check_time check_timers check_weather check_win32 
-TESTS=check_attack comet_perf
+#TESTS=check_alchemy check_apply check_ban check_build_map check_c_chat check_c_misc check_c_move check_c_new  check_commands check_c_party check_c_range check_c_wiz check_daemon check_disease check_egoitem check_gods check_hiscore check_init check_login check_main check_monster check_move check_pets check_player check_plugins check_resurrection check_rune check_shop check_skills check_skill_util check_spell_attack check_spell_effect check_spell_util check_swamp check_swap check_time check_timers check_weather check_win32 
+TESTS=check_attack check_c_object comet_perf
 
 CHECK_ROOT=../../
 CHECK_FOLDER=unit/server
